--- a/package.json
+++ b/package.json
@@ -1,41 +1,55 @@
 {
   "name": "nowy_projekt",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@eliav2/react-native-collapsible-view": "^1.4.0",
+    "@expo-google-fonts/open-sans": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
+    "expo-cli": "^5.4.4",
+    "expo-dev-client": "~0.6.3",
+    "expo-file-system": "~13.0.3",
+    "expo-font": "~10.0.3",
     "expo-secure-store": "~11.0.3",
+    "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.15",
+    "expo-updates": "~0.10.13",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1274.0",
+    "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-slider-box": "^1.1.20",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.28.1",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "5.4.6",
     "react-native-picker-select": "^8.0.4",
     "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-svg": "^11.0.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^8.0.0",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11"
   },
